Fixes classloader issues with plugin dependencies if directory names contain typically illegal characters like ' or spaces (like what exist in my home directory in windows).
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@12141 5fb7f6ec-07c1-534a-b4ca-9155e429e800